docs/데이터파트/version4.5/홀드아웃_개봉_절차.md
# 홀드아웃 개봉 절차 — 한 번만, 기록과 함께

> 데이터파트 v4.5 · 2026-09-11 · 이동원 · 이슈 [#240](https://github.com/devlee328288/Alpha_Stack/issues/240)
> 코드 [`supply/holdout.py`](../../../supply/holdout.py) ·
> [`scripts/export_holdout_dataset.py`](../../../scripts/export_holdout_dataset.py) ·
> [`scripts/unseal_holdout.py`](../../../scripts/unseal_holdout.py)
> 근거 [ADR 0004 사전등록](../../decisions/0004-사전등록.md) ·
> [ADR 0007 최종 모델 선정과 홀드아웃](../../decisions/0007-최종-모델-선정과-홀드아웃.md) ·
> [ADR 0009 최종 홀드아웃 실행설정](../../decisions/0009-최종-홀드아웃-실행설정.md)

## 0. 한 줄

홀드아웃(2024-09-01 부터)은 **한 번 열면 끝**입니다. 결과를 보고 무엇이든 한 번 고치면 그 뒤의
숫자는 확증이 아니라 탐색입니다. 그래서 여는 일을 **명령 하나로만** 하게 하고, 연 사실을
`reports/unseal.log` 에 **한 줄**로 남깁니다.

| 기록 줄 수 | 판정 |
|---:|---|
| 0 | 미개봉 |
| 1 | 개봉 1회 — 확증 가능 |
| 2 이상 | 🔴 **"홀드아웃 {n}회 개봉 — 확증 불가"** — 리포트 표지에 그대로 싣는다 |

🔴 **두 번째 개봉은 반출하기 전에 거부됩니다.** "쓰고 나서 알린다" 로는 되돌릴 수 없기 때문입니다.
그래도 누가 손으로 줄을 더하면 읽는 쪽(`unseal_verdict`)이 확증 불가를 알립니다 — 막는 것과
알리는 것을 둘 다 둡니다.

---

## 1. 누가 무엇을 — 순서가 곧 계약이다

```mermaid
sequenceDiagram
  autonumber
  participant M as 모델 파트(오준영)
  participant D as 데이터 파트(이동원)
  participant G as git
  participant L as reports/unseal.log
  participant R as run_final_holdout.py

  M->>G: ADR 0009 · config/final_holdout_model.json 커밋·머지 (사전등록)
  D->>D: open --dry-run → authorize --dry-run → check --dry-run
  Note over D: 기록은 reports/dryrun/ — 진짜 기록과 다른 파일
  D->>G: 사전등록 커밋 · 추적 파일 변경 0 확인
  D->>D: 데이터 게이트 (달력·시세·지수·수정주가)
  D->>D: 봉인 반출 data/sealed/holdout_…
  D->>L: 한 줄 (이미 있으면 반출 전에 멈춘다)
  D->>G: unseal.log 커밋
  M->>M: 봉인 반출본으로 입력 넷
  D->>D: authorize — 승인 JSON (계약 여섯 칸)
  M->>R: --mode official --authorization …
  R-->>D: 결과 폴더 (report.json)
  D->>D: check --result-dir — 확증 가능인가
```

| 단계 | 누가 | 무엇 | 남는 것 |
|---|---|---|---|
| ⓪ 사전등록 | 모델 파트 | ADR 0009 · `config/final_holdout_model.json` 을 **커밋·머지** — ✅ 2026-09-11 승인(PR #245) | 커밋 |
| ① 드라이런 | 데이터 파트 | `open --dry-run` → `authorize --dry-run` → `check --dry-run` | `reports/dryrun/` (gitignore) |
| ② 개봉 | 데이터 파트 · **팀 합의 뒤** | `open` | `reports/unseal.log` 한 줄 · `data/sealed/holdout_…/` |
| ③ 입력 넷 | 모델 파트 | `index_dev` · `index_holdout` · `stock_dev` · `stock_holdout` | 파일 넷 |
| ④ 승인 | 데이터 파트 | `authorize` | `reports/holdout_authorization.json` |
| ⑤ 실행 | 모델 파트 | `run_final_holdout.py --mode official` | 결과 폴더 |
| ⑥ 확인 | 데이터 파트 | `check --result-dir` | 판정 |

🔴 **⓪ 이 ② 보다 먼저 커밋돼 있어야 합니다.** `open` 은 사전등록 파일 넷(ADR 0004 · 0007 · 0009 ·
설정 JSON) 중 **가장 늦은 커밋**을 기록 줄에 적습니다. `check` 는 그 커밋 시각이 개봉 시각보다
앞서는지, 그리고 개봉 **뒤에** 사전등록 파일이 다시 커밋되지 않았는지 봅니다(ADR 0004 §9 · 개봉 후
수정 금지). ADR 0009 도 같은 말입니다 — *"개봉 후에는 값이 기대와 달라도 설정을 바꾸지 않고 그대로
최종 결과로 기록한다."*

---

## 2. 드라이런 — 진짜 봉인은 한 줄도 읽지 않는다

ADR 0009 는 승인 전까지 *"개발구간 마지막 공통 60거래일을 이용한 드라이런만"* 하라고 적었고,
2026-09-11 에 승인됐습니다(PR #245 · 오준영). 승인 뒤에도 진짜 개봉은 **드라이런이 끝까지 초록인 것을
본 뒤에** 합니다. 드라이런은 개발구간 끝(`20240831`)에서 **60거래일 전**을 가짜 홀드아웃 시작으로 삼고
`20240831` 까지만 읽습니다.

```powershell
# ① 입력 넷 먼저 — 모델 파트 준비기가 index_dev · index_holdout · stock_dev · stock_holdout .parquet 을 쓴다
python scripts/prepare_final_holdout_dry_run.py --output-dir data/sealed/dryrun_inputs_<날짜>
#    🔴 index_holdout 의 첫날을 확인한다 (2026-09-11 실측 20240529)

# ② 가짜 개봉 — 시작일을 준비기의 평가 첫날로 맞춘다 · 기록은 reports/dryrun/unseal.log
python scripts/unseal_holdout.py open --dry-run --start 20240529 --requested-by 이동원 --reason "통합 드라이런"

# ③ 가짜 승인 — run_id 는 실행기 드라이런이 결과에 쓰는 값(dry-run)과 같게
python scripts/unseal_holdout.py authorize --dry-run `
  --snapshot data/sealed/dryrun_20240529_20240831 --run-id dry-run `
  --index-dev <입력>/index_dev.parquet --index-holdout <입력>/index_holdout.parquet `
  --stock-dev <입력>/stock_dev.parquet --stock-holdout <입력>/stock_holdout.parquet

# ④ 실행기 드라이런 (같은 입력 넷)
python scripts/run_final_holdout.py --mode dry-run `
  --index-dev … --index-holdout … --stock-dev … --stock-holdout … `
  --output-dir data/sealed/dryrun_result_<날짜>

# ⑤ 확인
python scripts/unseal_holdout.py check --dry-run --result-dir data/sealed/dryrun_result_<날짜>
```

🔴 **시작일을 `--start` 로 맞추는 이유.** 준비기는 라벨(T+6) 때문에 평가가 20240822 에 끝나 **20240529** 에 시작하고,
`open --dry-run` 기본값은 달력으로 "개발구간 끝에서 60거래일 전" 입니다. 기본값으로 열면 `authorize` 가 *"홀드아웃 입력이
봉인 구간 밖"* 으로 거부합니다 — 검사는 맞게 막습니다. 진짜 개봉은 둘 다 `20240901` 이라 영향이 없습니다(팀장 결정
2026-09-11: 코드 기본값은 그대로 두고 `--start` 로 맞춘다).

**2026-09-11 통합 드라이런** — 위 ①~⑤ 전부 초록. `open` 616초(게이트 4종 ✅ · 봉인본 7,888,945행 · 기록 한 줄 ·
사전등록 `0d5bd5b`) → `authorize` 계약 여섯 칸 → 실행기 매수 후보 520 → `check` **✅ 확증 가능**. 봉인본
`daily_price_all.parquet` 은 같은 날 개발본 반출과 SHA-256 이 같았다(PR #248).

| 드라이런이 막는 것 | 어디서 |
|---|---|
| 가짜 시작이 `20240901` 이상 | `validate_range` — **DB 를 읽기 전에** |
| 끝이 `20240831` 을 넘음 | 〃 |
| 반출 파일에 봉인 구간 행 | `verify_no_holdout` — 파일을 **다시 열어** 전수 |
| 드라이런 반출본을 진짜 기록으로 열기 · 그 반대 | `verify_holdout_snapshot` — 기록 파일이 다르면 거부 |

드라이런은 커밋 안 된 변경이 있어도 ⚠️ 경고만 하고 계속합니다. 진짜 개봉은 거기서 멈춥니다.

⚠️ `scripts/export_holdout_dataset.py --dry-run` 을 따로 돌리면 반출본은 생기지만 **기록이 없어서
`load_holdout_snapshot` 으로 열리지 않습니다.** 통합 드라이런은 `unseal_holdout.py open --dry-run` 으로 합니다.

---

## 3. 진짜 개봉 — 명령 하나

```powershell
git switch main; git pull --ff-only origin main
git status --short        # 추적 파일 변경이 0 이어야 한다
python scripts/unseal_holdout.py open --requested-by 이동원 --reason "최종 모델 1회 평가"
```

`open` 이 차례로 확인하는 것:

| # | 확인 | 못 넘으면 |
|---|---|---|
| 1 | `reports/unseal.log` 가 비어 있다 | 🔴 반출도 기록도 안 한다 (종료코드 2) |
| 2 | 사전등록 파일 넷이 있고 커밋됐다 | 커밋·머지 뒤 다시 (종료코드 1) |
| 3 | 추적 파일에 커밋 안 된 변경이 없다 | 〃 |
| 4 | 달력·시세·지수가 끝날까지 있다 | `python -m pipelines.refresh` |
| 5 | 구간의 `adj_close` 빈 행이 0 | `python -m pipelines.refresh --with-adj` |
| 6 | 시작이 코드 정본 `20240901` | `--start` 로 못 바꾼다 |

넘으면 `data/sealed/holdout_20240901_<끝>/` 에 봉인 반출본을 쓰고 **곧바로** 기록 한 줄을 씁니다.

```text
# reports/unseal.log — 한 줄 = 한 번의 개봉. 행이 2개가 되는 순간 프로젝트는 실패로 보고한다.
unsealed_at_kst | git_commit | snapshot_sha256 | preregistration_commit | requested_by | reason
```

| 칸 | 값 |
|---|---|
| `unsealed_at_kst` | 개봉 시각 (KST · 초까지) |
| `git_commit` | 반출한 코드의 커밋 |
| `snapshot_sha256` | `MANIFEST_holdout.json` 의 지문 — 대장 안에 파일 둘의 SHA-256 이 있다 |
| `preregistration_commit` | 사전등록 파일 넷 중 가장 늦은 커밋 |
| `requested_by` · `reason` | 누가 왜 — 칸 구분자(세로줄)와 줄바꿈이 들어 있으면 거부 |

봉인 반출본은 개발구간 반출과 **같은 함수**(`build_full_daily`)로 만듭니다. 개발구간을 함께 싣는
이유는 피처가 롤링 창이라 홀드아웃 첫날에도 그 앞 행이 필요하기 때문입니다.
🔴 **반출본을 다시 만들면 지문이 달라져 기록과 어긋나므로** 이미 무언가 든 폴더에는 쓰지 않습니다.

🔴 `reports/unseal.log` 는 **곧바로 커밋**합니다. `.gitignore` 가 `*.log` 를 막지만 이 파일만
`!reports/unseal.log` 로 풀어 두었습니다 — ADR 0004 의 증거가 *"사전등록 커밋 시각이 이 파일 첫 행보다
앞선다"* 이고, 그 대조는 git 이력으로만 됩니다.

---

## 4. 승인 JSON — 실행기 계약 여섯 칸

`scripts/run_final_holdout.py`(오준영 님)의 `official` 모드가 이 파일을 봅니다. ADR 0009 — *"개봉 승인
JSON 에 같은 설정 지문과 입력 파일 네 개의 SHA-256 이 있을 때만 허용한다."*

| 칸 | 값 | 어디서 오나 |
|---|---|---|
| `schema_version` | `1` | 계약 |
| `authorized` | `true` | 계약 |
| `run_id` | 결과 · 백테스트 원장 · 화면을 잇는 ID | 모델 파트와 합의 |
| `holdout_start` | `"20240901"` | 코드 정본 `evaluation/horizon.py` |
| `config_sha256` | 설정 JSON 지문 | 실행기 모듈이 있으면 **그 계산** · 없으면 정렬 JSON(`sort_keys` · 구분자 `,` `:` · `ensure_ascii=False`) |
| `source_sha256` | 입력 넷의 SHA-256 | 파일에서 계산 |

그 뒤에 **되짚기 위한 칸**을 더합니다(실행기는 안 봅니다) — `dry_run` · `evaluation_range` ·
`authorized_at_kst` · `git_commit` · `config_path` · `config_sha256_method` · `source_path` ·
`snapshot_sha256` · `unseal`.

`authorize` 가 거부하는 경우:

| 경우 | 왜 |
|---|---|
| 기록이 0줄 또는 2줄 이상 | 열지 않았거나 확증 불가 |
| 봉인 반출본의 지문이 기록과 다르다 | 다른 반출본으로 승인하려 한다 |
| `*_dev` 의 마지막 날이 `20240901` 이후 | 개발 입력에 봉인 구간이 섞였다 |
| `*_holdout` 이 봉인 구간 밖 | 〃 |
| `run_id` 가 비었다 | 결과를 잇지 못한다 |
| 승인 파일이 이미 있다 | 덮어쓰지 않는다 |

실행(모델 파트):

```powershell
python scripts/run_final_holdout.py --mode official --authorization reports/holdout_authorization.json `
  --index-dev <경로> --index-holdout <경로> --stock-dev <경로> --stock-holdout <경로> `
  --output-dir <결과 폴더>
```

---

## 5. 확인 — 확증 가능인가

```powershell
python scripts/unseal_holdout.py check --result-dir <결과 폴더>
```

| 확인 | 붉으면 |
|---|---|
| 기록이 정확히 한 줄 | 2줄 이상이면 배너로 끝 (종료코드 2) |
| 사전등록 커밋 시각 < 개봉 시각 | ADR 0004 무효 |
| 개봉 뒤 사전등록 파일 커밋 없음 | 개봉 후 수정 금지 위반 |
| 승인 파일에 계약 여섯 칸 · 스냅샷 지문이 기록과 같음 | 다른 개봉의 승인 |
| 승인 뒤 입력 파일이 안 바뀜 | 승인한 것과 돌린 것이 다르다 |
| 결과 `report.json` 의 `run_id` · 입력 지문 넷이 승인과 같음 | 〃 |
| 결과 폴더에 `.db`·`.zip`·`.pdf`·`.key`·`.env` 없음 · 시크릿 값 없음 · 원자료 가격 칸 없음 | 원자료 재배포 (KRX 약관) · 키 유출 |

시크릿은 **값을 출력하지 않고** 들어 있는지만 봅니다.

---

## 6. 읽는 쪽 — 봉인 반출본을 여는 유일한 문

```python
from supply.holdout import load_holdout_snapshot, read_unseal_log, unseal_verdict

snap = load_holdout_snapshot("data/sealed/holdout_20240901_<끝>")   # 기록과 지문이 맞을 때만 열린다
snap.daily, snap.index, snap.manifest, snap.unseal
print(unseal_verdict(read_unseal_log())["status"])                  # 미개봉 · 개봉 1회 · 확증 불가
```

개발본을 읽는 `supply.hf_model_data` 는 **홀드아웃 행이 있으면** 거부하고, `supply.holdout` 은
**개봉 기록이 없으면** 거부합니다 — 두 문이 서로의 반대편을 막습니다.

---

## 7. 하면 안 되는 것

| 하지 말 것 | 왜 |
|---|---|
| `export_holdout_dataset.py` 로 진짜 반출 | CLI 는 드라이런만 받는다 — 반출이 곧 개봉이라 기록과 함께여야 한다 |
| `reports/unseal.log` 를 손으로 고치거나 줄을 지우기 | 기록이 곧 증거다. 칸 수가 다르면 읽는 쪽이 세운다 — **고치는 것 자체가 개봉 이력** |
| 드라이런을 진짜 기록에 남기기 | 진짜 개봉이 **두 번째**가 된다 |
| 개봉 뒤 설정 · ADR 수정 | ADR 0009 — 기대와 달라도 그대로 최종 결과로 기록 |
| 봉인 반출본을 HF · 드라이브에 올리기 | `data/sealed/` 는 gitignore · KRX 약관 제11조 ② |
